time-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: elixir-backend
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuejs-frontend
            port:
              number: 80
